new tweets page

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -14,5 +14,9 @@
     <h3>How it's done</h3>
     <p>Let's start coding</p>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTIN0C9oVRAkYmdFO9ih5yRpHtreUjSGjVbBddSMD0BYA&s" alt="Girl" width="500" height="333">
+    <div>
+        <button><a href="tweets.html">Check out the Tweets</a></button>
+    </div>
+    
 </body>
 </html>
