--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -3,20 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML</title>
+    <title>HTML Basics</title>
 </head>
 <body>
-    <h1>Welcome to my Website</h1>
-    <p>Hi there</p>
-    <p>My name is Annie</p>
-    <h2>What's the Website About</h2>
-    <p>This is my HTML basics project</p>
-    <h3>How it's done</h3>
-    <p>Let's start coding</p>
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTIN0C9oVRAkYmdFO9ih5yRpHtreUjSGjVbBddSMD0BYA&s" alt="Girl" width="500" height="333">
-    <div>
-        <button><a href="tweets.html">Check out the Tweets</a></button>
-    </div>
-    
+    <header>
+        <ul><li><a href="index.html">Home</a>
+        </li>
+        <li><a href="tweets.html">Tweets</a></li>
+        </ul>
+    </header>
+    <main>
+        <article>
+            <h1>Welcome to my Website</h1> 
+            <p>Hi there</p>
+            <p>My name is Annie</p>
+            <h2>What's the Website About</h2>
+            <p>This is my HTML basics project</p>
+            <h3>How it's done</h3>
+            <p>Let's start coding</p>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTIN0C9oVRAkYmdFO9ih5yRpHtreUjSGjVbBddSMD0BYA&s" alt="Girl" width="500" height="333">
+
+            <div>
+                <button><a href="tweets.html">Check out the Tweets</a></button>
+            </div>
+        </article>
+
+        <aside><p>placeholder to add comment thread later</p></aside>
+    </main>
+    <footer>
+        <p>Made by Annie <a href="index.html" target="_blank">here</a></p>
+    </footer>   
 </body>
 </html>
