--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -6,15 +6,30 @@
     <title>HTML Basics</title>
 </head>
 <body>
-    <div>
-        <article> <h3> Tweets</h3>
+    <header>
+        <ul><li>
+            <a href="index.html">Home</a>
+            <a href="tweets.html">Tweets</a>
+        </li></ul>
+    </header>
+
+    <main>
+        <article> 
             <blockquote class="twitter-tweet"><p lang="en" dir="ltr">One of our <a href="https://twitter.com/facesofalxse?ref_src=twsrc%5Etfw">@facesofalxse</a>, <a href="https://twitter.com/AliceMamsana?ref_src=twsrc%5Etfw">@AliceMamsana</a> was recently featured on one of the tech blogs. We are so proud of her! Kindly click the link and dive in to read her incredible story here on <a href="https://twitter.com/aptantech?ref_src=twsrc%5Etfw">@aptantech</a> blog: &quot;<a href="https://t.co/2KWeqWQK7j">https://t.co/2KWeqWQK7j</a>&quot;</p>&mdash; Faces of ALX SE (@facesofalxse) <a href="https://twitter.com/facesofalxse/status/1722891596352389590?ref_src=twsrc%5Etfw">November 10, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
-        </article>
-    </div>
+            <div>
+                <p><a href="index.html">Go back to homepage </a></p>
+            </div>
 
-    <div>
-        <p><a href="index.html">Go back to homepage </a></p>
-    </div>
+        </article>
+
+        <aside><p>placeholder to add comment thread later</p></aside>
+    </main>
+
+    <footer>
+        <p>Made by Annie <a href="index.html" target="_blank">here</a></p>
+    </footer>
+
+    
 </body>
 </html>
