Added a video section

--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -64,6 +64,82 @@
                 </div>
             </div>
         </section>
+        <!-- quote section ends here -->
+
+        <!-- videos section starts here -->
+        <section>
+            <h3>Most popular tutorials</h3>
+            <div>
+                <div>
+                    <img src="./Images/preview.png" alt="preview">
+                    <h4>Diagonal smile</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <div>
+                        <img src="./Images/1.png" alt="">
+                        <h4>Philip Massey</h4>
+                    </div>
+                    <div>
+                        <img src="./Images/Star_5.png" alt="star">
+                        <img src="./Images/Star_5.png" alt="">
+                        <img src="./Images/Star_5.png" alt="">
+                        <img src="./Images/Star_5.png" alt="">
+                        <img src="./Images/Star_5.png" alt="">
+                        <p>8 min</p>
+                    </div>
+                </div>
+                <div>
+                    <img src="./Images/preview (1).png" alt="preview">
+                    <h4>Sad smile</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <div>
+                        <img src="./Images/1.png" alt="">
+                        <h4>Philip Massey</h4>
+                    </div>
+                    <div>
+                        <img src="./Images/Star_5.png" alt="star">
+                        <img src="./Images/Star_5.png" alt="">
+                        <img src="./Images/Star_5.png" alt="">
+                        <img src="./Images/Star_5.png" alt="">
+                        <img src="./Images/Star_5.png" alt="">
+                        <p>8 min</p>
+                    </div>
+                </div>
+                <div>
+                    <img src="./Images/preview (2).png" alt="preview">
+                    <h4>Natural smile</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <div>
+                        <img src="./Images/1.png" alt="">
+                        <h4>Philip Massey</h4>
+                    </div>
+                    <div>
+                        <img src="./Images/Star_5.png" alt="star">
+                        <img src="./Images/Star_5.png" alt="">
+                        <img src="./Images/Star_5.png" alt="">
+                        <img src="./Images/Star_5.png" alt="">
+                        <img src="./Images/Star_5.png" alt="">
+                        <p>8 min</p>
+                    </div>
+                </div>
+                <div>
+                    <img src="./Images/preview (3).png" alt="preview">
+                    <h4>Happy smile</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <div>
+                        <img src="./Images/1.png" alt="">
+                        <h4>Philip Massey</h4>
+                    </div>
+                    <div>
+                        <img src="./Images/Star_5.png" alt="star">
+                        <img src="./Images/Star_5.png" alt="">
+                        <img src="./Images/Star_5.png" alt="">
+                        <img src="./Images/Star_5.png" alt="">
+                        <img src="./Images/Star_5.png" alt="">
+                        <p>8 min</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
