FAQ section added

--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -140,6 +140,61 @@
                 </div>
             </div>
         </section>
+        <!-- video section ends here -->
+        <!-- membership section starts here -->
+        <section>
+            <h3>Free Membership</h3>
+            <div>
+                <div>
+                    <img src="./Images/smile.png" alt="smile">
+                    <h4>Lorem Ipsum</h4>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit</p>
+                </div>
+                <div>
+                    <img src="./Images/smile.png" alt="smile">
+                    <h4>Lorem Ipsum</h4>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit</p>
+                </div>
+                <div>
+                    <img src="./Images/smile.png" alt="smile">
+                    <h4>Lorem Ipsum</h4>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit</p>
+                </div>
+                <div>
+                    <img src="./Images/smile.png" alt="smile">
+                    <h4>Lorem Ipsum</h4>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit</p>
+                </div>
+            </div>
+            <button>Register For Free</button>
+        </section>
+        <!-- membership section ends here -->
+        <!-- FAQ section starts -->
+        <section>
+            <h3>F.A.Q</h3>
+            <div>
+                <div>
+                    <div>
+                        <h4>How does this work</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis cum ullam rerum! Enim similique rem quam doloremque fuga quidem, temporibus error nisi at atque dolorum.</p>
+                    </div>
+                    <div>
+                        <h4>How does this work</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis cum ullam rerum! Enim similique rem quam doloremque fuga quidem, temporibus error nisi at atque dolorum.</p>
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <h4>How does this work</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis cum ullam rerum! Enim similique rem quam doloremque fuga quidem, temporibus error nisi at atque dolorum.</p>
+                    </div>
+                    <div>
+                        <h4>How does this work</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis cum ullam rerum! Enim similique rem quam doloremque fuga quidem, temporibus error nisi at atque dolorum.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
