--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -8,7 +8,7 @@
 <body>
     <!-- header starts -->
     <header>
-        <a href="#"><img src="./Images/logo.svg" alt="logo"></a>
+        <a href="#"><img src="./Images/logo.png" alt="logo"></a>
         <div>
             <a href="#">Link</a>
             <a href="#">Link</a>
@@ -196,5 +196,17 @@
             </div>
         </section>
     </main>
+    <!-- footer section -->
+    <footer>
+        <div>
+            <img src="./Images/logo.png" alt="logo" style="background-color: pink;">
+            <div>
+                <a href="#"><img src="./Images/Facebook_White.png" alt="facebook"></a>
+                <a href="#"><img src="./Images/Twitter_White.png" alt="twitter"></a>
+                <a href="#"><img src="./Images/Instagram_White.png" alt="instagram"></a>
+            </div>
+        </div>
+        <p>@smileschool 2020</p>
+    </footer>
 </body>
 </html>
