--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="base.css">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="works_on_smartphone">
     <header>
+        <a href="#" class="logo">&#9832;</a>
         <ul><li><a href="index.html">Home</a>
         </li>
         <li><a href="tweets.html">Tweets</a></li>
