--- a/css_basic/tweets.html
+++ b/css_basic/tweets.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+        <a href="#" class="logo">&#9832;</a>
         <ul><li>
             <a href="index.html">Home</a>
             <a href="tweets.html">Tweets</a>
